# wsdf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-examples.sh  macos-plug-postprocess.sh  macos-plugin-postprocess.sh
container-dev/: CMakeLists.txt  Dockerfile  build.sh  hello.c
docs/: CONTRIBUTING  TODO.txt
epan-sys/: Cargo.toml  README.md  bindings.rs  build.rs  wrapper.h
wsdf/: Cargo.toml  baby_udp_expanded.rs  baby_udp_expanded2.rs
wsdf-derive/: Cargo.toml
wsdf-derive/src/: attributes.rs  lib.rs  model.rs  types.rs  util.rs
wsdf/examples/: dns.rs  moldudp64.rs  multi.rs  udp.rs
wsdf/src/: lib.rs
wsdf/tests/compile_tests/should_fail/: bitwise_or_more_than_two_display.rs  bitwise_or_more_than_two_display.stderr  invalid_len_field.rs  invalid_len_field.stderr  missing_decode_from_attr.rs  missing_decode_from_attr.stderr  (+3 more)
wsdf/tests/expand/: dissector_table_protocol.expanded.rs  dissector_table_protocol.rs  simple_plugin.expanded.rs  simple_plugin.rs
wsdf/tests/should_fail/: bitwise_or_more_than_two_display.stderr  invalid_get_variant.rs  invalid_get_variant.stderr  invalid_len_field.stderr  missing_decode_from_attr.stderr  union.stderr  unknown_container_attr.stderr  unknown_wsdf_attr.rs  unknown_wsdf_attr.stderr
wsdf/tests/should_pass/: arrays.rs  arrays_nested.rs  bitwise_or_display.rs  dissect_field.rs  get_enum_variant.rs  struct.rs  struct_with_nested_struct.rs  unit_tuple_struct_field.rs  unit_tuple_variant_primitive_type.rs
wsdf/tests/simple/: version.rs  version2.rs
wsdf/tests/unit/: mod.rs  protocol_macro_tests.rs  util.rs
(+7 files in other folders)
